Fix exp-exit-survey: Restore help-text describing Databrary; align radio buttons with tops of labels; align withdrawal text with checkbox and make normal weight.

--- a/exp-player/addon/styles/components/exp-exit-survey.scss
+++ b/exp-player/addon/styles/components/exp-exit-survey.scss
@@ -4,6 +4,7 @@
 
 .exp-physics-exit-survey .extra-info {
     font-size: small;
+    font-weight: normal;
     color: rgb(95,95,95);
 }
 
@@ -11,4 +12,9 @@
     width: 100%;
     border-radius: 5px;
     border-color: rgb(95, 95, 95);
+}
+
+.exp-physics-exit-survey .radio-holder {
+    position:relative;
+    margin-top:-4px;
 }
